# Vending_Macine

./: Blik.cpp  Blik.h  CMakeLists.txt  Cash.cpp  Cash.h  Karta.cpp  Karta.h  LogFile.txt  Maintenance.cpp  Maintenance.h  PaymentMethodContainer.cpp  PaymentMethodContainer.h  Platnosc.cpp  Platnosc.h  Service.cpp  Service.h  drink.cpp  drink.h  machine.cpp  machine.h  main.cpp  stdinCash.txt  stdinErrorHandle.txt  stdinRefillAndSummary.txt  stdinTemplateLogs.txt  temat2.txt
