cmake_minimum_required(VERSION 3.17)
project(TwarogMaciej-etap3)

set(CMAKE_CXX_STANDARD 17)

add_executable(TwarogMaciej-etap3 main.cpp drink.cpp drink.h machine.cpp machine.h Karta.cpp Karta.h Platnosc.cpp Platnosc.h Cash.cpp Cash.h Blik.cpp Blik.h PaymentMethodContainer.cpp PaymentMethodContainer.h Maintenance.cpp Maintenance.h Service.cpp Service.h)